# sandbox

./: pyproject.toml  rsi_count.html  test_json.py
export_MT/: MT_dev_parquet.py  config.py  export_mt.py  load_raw_data.py  pyproject.toml
flaskapi/: app.py  dockerfile  pyproject.toml  test_json.py
flaskapi/henrik/: hello_world.py
flaskapi2/: docker-compose.debug.yml  docker-compose.yml  dockerfile  pyproject.toml
kalman_filter/: create_prom_group_rsi.py  min_variance_estimator.py  pyproject.toml  test_kalman.py  ulfs_kalman.py  ulfs_second_estimator.py
lorsi_cube/: find_distance.py  grk_zone_geometry.py  make_postcode_zone_dict.py  pyproject.toml  test_lorsi_cube.py  test_weighted_MA.py
lorsi_zones/: grk_zone_geometry.py  grunnkretser.py  lorsi_grk_zone_class.py  lorsi_zone_class.py  pyproject.toml  test_lorsi_prom_class.py  zone_analysis.py
partition_plots/: pyproject.toml
postcodezonedict/: make_postcode_zone_dict.py  pyproject.toml
rsi100sqm/: plot100sqm.py  pyproject.toml
rsi_plots/: plot_aprtm_houses.py  plot_prom_group_rsi.py
test_dev_MT/: MT_dev_parquet.py  backup_MT_dev.py  fix_MT_database.py  fylker.csv  fylker.ods  get_dev_MT.py  load_data.py  postnummer.csv  pyproject.toml  test_cluster_lib.py  test_clustering.py  test_geodata_fylker.py  test_my_clustering.py  test_my_clustering2.py  test_norway_regions.py  test_region_merge.py
test_priceindex/: added_data.py  app.py  compute_CBI.py  invalid_unitkey_string_test.py  pi_split.py  pyproject.toml  read_priceindex_object.py  shifengs_discont_error.py  test_LORSI_cube.py  test_cbi_creator.py  test_df_fill_na.py  test_geopandas.py  test_missing_unitkey.py  test_pi_masterclass.py
test_priceindex/dataprocessing/: bydeler.json  postbydel.csv
test_ssb/: pyproject.toml  test_ssb.py
test_torch/: model.pth  pyproject.toml  test_torch.py
zonesplitpi/: OLS_class.py  adj_matrix.py  compute_LORSI_for_zones.py  create_OLS.py  lpf_hpf_addition.py  planning.txt  pyproject.toml  zone_RSI_class.py  zone_analysis.py  zonesplipi.py  zonesplit_cross_validation.py
