[tool.poetry]
name = "export-mt"
version = "0.1.0"
description = ""
authors = ["Henrik Anfinsen <henrik@solgt.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
pymongo = "^4.4.1"
pyarrow = "^11.0.0"
pandas = "^1.3.2"
geopandas = "0.13.2"
matplotlib = "3.7.2"
tqdm = "^4.66.1"
alive-progress = "3.1.4"
arrow = "1.2.3"
seaborn = "0.12.2"
"solgt.db" = {path = "../../py/lib/db", develop = true}
"solgt.priceindex" = {path = "../../py/lib/priceindex", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
