[tool.poetry]
name = "kalman-filter"
version = "0.1.0"
description = ""
authors = ["Henrik <henrik@solgt.no>"]
readme = "README.md"
packages = [{include = "kalman_filter"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
